--- a/Videotheek/MainWindow.xaml
+++ b/Videotheek/MainWindow.xaml
@@ -1,7 +1,11 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Gemeenschap="clr-namespace:Gemeenschap;assembly=Gemeenschap" mc:Ignorable="d" x:Class="Videotheek.MainWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:Gemeenschap="clr-namespace:Gemeenschap;assembly=Gemeenschap"
+    xmlns:glob="clr-namespace:System.Globalization;assembly=mscorlib"
+    mc:Ignorable="d" x:Class="Videotheek.MainWindow"
         Title="Videotheek" Height="450" Width="525" Loaded="Window_Loaded">
     <Window.Resources>
         <CollectionViewSource x:Key="filmViewSource" d:DesignSource="{d:DesignInstance {x:Type Gemeenschap:Film}, CreateList=True}"/>
@@ -24,22 +28,27 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Content="Band Nr:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,4,0,2" Grid.Row="0" VerticalAlignment="Center"/>
-                <TextBox x:Name="bandNrTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3,4,-56,4" Grid.Row="0" Text="{Binding BandNr, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180"/>
+                <Label Content="Band Nr:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,4,0,2" Grid.Row="0" VerticalAlignment="Center" />
+                <TextBox x:Name="bandNrTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3,4,-56,4" Grid.Row="0" Text="{Binding BandNr, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
                 <Label Content="Genre Nr:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,1,0,2" Grid.Row="3" VerticalAlignment="Center"/>
-                <ComboBox x:Name="genreNrCbBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3,3,-54,2" Grid.Row="3" Text="{Binding GenreNr, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" />
+                <ComboBox x:Name="genreNrCbBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3.2,1.2,-48.8,3.6" Grid.Row="3" Text="{Binding GenreNr, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" SelectedValue="{Binding GenreNr}" IsEnabled="False"/>
                 <Label Content="In Voorraad:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,1,0,2" Grid.Row="5" VerticalAlignment="Center"/>
-                <TextBox x:Name="inVoorraadTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,3,-53,3" Grid.Row="5" Text="{Binding InVoorraad, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180"/>
+                <TextBox x:Name="inVoorraadTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,3,-53,3" Grid.Row="5" Text="{Binding InVoorraad, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
                 <Label Content="Prijs:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,34,0,-28" Grid.Row="6" VerticalAlignment="Center" RenderTransformOrigin="1.124,6.121"/>
-                <TextBox x:Name="prijsTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="3,33,-51,-23" Grid.Row="6" Text="{Binding Prijs, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180"/>
+                <TextBox x:Name="prijsTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="3,33,-51,-23" Grid.Row="6" Text="{Binding Prijs, ConverterCulture={x:Static glob:CultureInfo.CurrentCulture}, Mode=TwoWay, NotifyOnValidationError=true, StringFormat=c, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
                 <Label Content="Titel:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,2,0,1" Grid.Row="1" VerticalAlignment="Center"/>
-                <TextBox x:Name="titelTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,3,-55,3" Text="{Binding Titel, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" RenderTransformOrigin="0.073,0.726" Grid.Row="1"/>
+                <TextBox x:Name="titelTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,3,-55,3" Text="{Binding Titel, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" RenderTransformOrigin="0.073,0.726" Grid.Row="1" IsReadOnly="True"/>
                 <Label Content="Totaal Verhuurd:" Grid.Column="0" HorizontalAlignment="Left" Margin="-14,60,0,-54" Grid.Row="6" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-                <TextBox x:Name="totaalVerhuurdTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,63,-50,-54" Grid.Row="6" Text="{Binding TotaalVerhuurd, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180"/>
+                <TextBox x:Name="totaalVerhuurdTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,63,-50,-54" Grid.Row="6" Text="{Binding TotaalVerhuurd, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
                 <Label Content="Uit Voorraad:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,1,0,5" Grid.Row="6" VerticalAlignment="Center"/>
-                <TextBox x:Name="uitVoorraadTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="3,5,-52,5" Grid.Row="6" Text="{Binding UitVoorraad, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180"/>
+                <TextBox x:Name="uitVoorraadTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="3,5,-52,5" Grid.Row="6" Text="{Binding UitVoorraad, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
             </Grid>
         </StackPanel>
-        <StackPanel Width="165" Margin="0,0,0,10"/>
+        <StackPanel Width="165" Margin="0,0,0,10">
+            <Button x:Name="btToevoegbevestig" Width="100" Height="40" Margin="0,30" Content="Toevoegen"/>
+            <Button x:Name="btVerwijdAnnuleer" Width="100" Height="40" Margin="0,-20" Content="Verwijderen"/>
+            <Button x:Name="btAllesOpslaan" Width="100" Height="40" Margin="0,40" Content="Alles opslaan"/>
+            <Button x:Name="btVerhuur" Width="100" Height="40" Margin="0,40" Content="Verhuur"/>
+        </StackPanel>
     </StackPanel>
 </Window>
