--- a/Videotheek/MainWindow.xaml
+++ b/Videotheek/MainWindow.xaml
@@ -14,7 +14,7 @@
     <StackPanel Orientation="Horizontal">
         <StackPanel DataContext="{StaticResource filmViewSource}"  Width="335" Margin="0,0,0,10" >
             <Label FontSize="20" Width="175" Content="Videotheek - films"/>
-            <ListBox x:Name="lbFilms" Height="125" ItemsSource="{Binding}" DisplayMemberPath="Titel"/>
+            <ListBox x:Name="lbFilms" Height="125" ItemsSource="{Binding}" DisplayMemberPath="Titel" SelectedIndex="0"/>
             <Grid  x:Name="grid1" HorizontalAlignment="Left" Margin="54,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.326,0.485" Width="267">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -31,7 +31,7 @@
                 </Grid.RowDefinitions>
                 <Label Content="Band Nr:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,4,0,2" Grid.Row="0" VerticalAlignment="Center" />
                 <TextBox x:Name="bandNrTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3,4,-56,4" Grid.Row="0" Text="{Binding BandNr, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="180" IsReadOnly="True"/>
-                <Label Content="Genre Nr:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,1,0,2" Grid.Row="3" VerticalAlignment="Center"/>
+                <Label Content="Genre:" Grid.Column="0" HorizontalAlignment="Left" Margin="0,1,0,2" Grid.Row="3" VerticalAlignment="Center"/>
                 <ComboBox x:Name="genreNrCbBox" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3.2,1.2,-48.8,3.6" Grid.Row="3" VerticalAlignment="Center" Width="180" IsEnabled="False" >
                     <ComboBox.Text>
                         <Binding Path="GenreNr" Mode="OneWayToSource"  NotifyOnValidationError="True" ValidatesOnExceptions="True" UpdateSourceTrigger="LostFocus"  >
@@ -102,8 +102,8 @@
         <Grid Width="195" Margin="0,0,0,10">
             <Button x:Name="btToevoegbevestig" Width="100" Height="40" Margin="0,-300,0,0" Content="Toevoegen" Click="btToevoegbevestig_Click"/>
             <Button x:Name="btVerwijdAnnuleer" Width="100" Height="40" Margin="0,-200,0,0" Content="Verwijderen" Click="btVerwijdAnnuleer_Click"/>
-            <Button x:Name="btAllesOpslaan" Width="100" Height="40" Margin="0,-75,0,0" Content="Alles opslaan"/>
-            <Button x:Name="btVerhuur" Width="100" Height="40" Margin="0,150,0,0" Content="Verhuur" Panel.ZIndex="1" />
+            <Button x:Name="btAllesOpslaan" Width="100" Height="40" Margin="0,-75,0,0" Content="Alles opslaan" Click="btAllesOpslaan_Click"/>
+            <Button x:Name="btVerhuur" Width="100" Height="40" Margin="0,150,0,0" Content="Verhuur" Panel.ZIndex="1" Click="btVerhuur_Click" />
             <Label Width="150" Height="23" FontSize="10"  Margin="0,300,40,0"  Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=totaalVerhuurdTextBox}"/>
             <Label Width="150" Height="23" FontSize="10"  Margin="2,250,40,0" Content="{Binding ElementName=prijsTextBox, Path=(Validation.Errors)[0].ErrorContent}"></Label>
             <Label Name="labelUitvr" Width="150" Height="23" FontSize="10"  Margin="0,190,40,0"  Content="{Binding ElementName=uitVoorraadTextBox, Path=(Validation.Errors)[0].ErrorContent}" Panel.ZIndex="0"></Label>
